# bitshares1-qtwallet

./: .gitignore  BitSharesApp.cpp  BitSharesApp.hpp  BitSharesXT.desktop.in  CMakeLists.txt  ClientWrapper.cpp  ClientWrapper.hpp  CrashReport.cpp  CrashReport.hpp  GenerateHtDocs.cmake.in  MainWindow.cpp  MainWindow.hpp  README.md  Utilities.cpp  Utilities.hpp  WebUpdates.hpp  bitshares.qrc  bts_xt_thread.cpp  bts_xt_thread.h  clientwrapper.cpp  config.hpp.in  config_dev.hpp.in  config_prod.hpp  htdocs  htdocs.qrc  license.txt  login.php  main.cpp  utilities.cpp  utilities.hpp
CMakeModules/: MacOSXBundleInfo.plist.in
html5viewer/: html5viewer.cpp
images/: bitshares.icns  qtapp.icns
qml/: LicenseAgreement.qml
translations/: ru_RU.ts  zh_CN.ts
windows/: build_combined_installer.bat.in  combined_installer_config.json.in  resource.h  resource.rc  setup.iss.in  setup_combined.iss.in
